--- a/Electricidad.html
+++ b/Electricidad.html
@@ -23,7 +23,7 @@
                     <li><a href="Electronica.html">Electronica</a></li>
                     <li><a href="Telecomunicaciones.html">Telecomunicaciones</a></li>
                     <li><a href="Fotovoltaica.html">Fotovoltaica</a></li>
-                    <li><a href="Informatica.html">Programación</a></li>
+                    <li><a href="Informatica.html">Informatica</a></li>
                     <li><a href="Domotica.html">Domótica</a></li>
                 </ul>
             </nav>
@@ -48,6 +48,35 @@
                     <p><a href="https://www.portalelectricidad.es/" target="_blank">Portal Electricidad </a></p>
                     <p><a href="https://hager.com/es" target="_blank">HAGER</a></p>
                     <p><a href="https://www.ilumitec.es/?_gl=1*axx7el*_up*MQ..&gclid=Cj0KCQjw99e4BhDiARIsAISE7P_grlN5mrYRR8WYC4bS2HoRrsZYnlKzj3PVoQm_weuZKjrSHQO14SIaAndbEALw_wcB" target="_blank">ILUMINOTEC</a></p>
+                    <p><a href="https://www.druseidt.de/spanisch/home/index.html" target="_blank">Acesorios para embarrados</a></p>
+                    <p><a href="https://lineasyequipos.com/" target="_blank">Lines y equipos de alta tension</a></p>
+                    <p><a href="https://www.maxge.com/" target="_blank">MAXGE</a></p>
+                    <p><a href="https://www.adels-contact.com/index.html" target="_blank">Conectores ADELS</a></p>
+                    <p><a href="https://www.schlemmer.com/home" target="_blank">Canalizaciones Schlemmer</a></p>
+                    <p><a href="https://www.wago.com/es/" target="_blank">Conectores WAGO</a></p>
+                    <p><a href="https://www.metrel.es/es/?" target="_blank">Equipos de medicion METREL</a></p>
+                    <p><a href="https://kps-intl.com/eu/es/" target="_blank">Equipos de medicion KPS</a></p>
+                    <p><a href="https://www.chauvin-arnoux.es/es" target="_blank">Equipos de medicion CHAUVIN-ARNOUX</a></p>
+                    <p><a href="https://www.hakel.com/en" target="_blank">Sobretensiones HAKEL</a></p>
+                    <p><a href="https://tense.com.tr/en/" target="_blank">TENSE</a></p>
+                    <p><a href="https://www.fanton.com/it-it/" target="_blank">FANTON</a></p>
+                    <p><a href="https://www.onyx-evc.com/" target="_blank">Cargador para coche electrico ONYX</a></p>
+                    <p><a href="https://www.elkoep.com/" target="_blank">ELKO</a></p>
+                    <p><a href="https://famatel.com/" target="_blank">FAMATEL</a></p>
+                    <p><a href="https://quadritalia.com/" target="_blank">QUADRITALIA</a></p>
+                    <p><a href="https://bslight.es/en/" target="_blank">Iluminacion led BSLIGHT</a></p>
+                    <p><a href="https://astraktis.com/" target="_blank">Iliminacion Industrial ASTRAKTIS</a></p>
+                    <p><a href="https://www.eecoma.com/" target="_blank">COMA</a></p>
+                    <p><a href="https://gapsantransformer.com.tr/urunlerimiz/" target="_blank">Traformadores GAPSAN</a></p>
+                    <p><a href="https://www.ideajenerator.com/en" target="_blank">Grupos electrogenos IDEA</a></p>
+                    <p><a href="https://revotek.com.tr/en/products/" target="_blank">Traformadores REVOTEK</a></p>
+                    <p><a href="https://dinuy.com/" target="_blank">DINUY</a></p>
+                    <p><a href="https://polylux.com/en/" target="_blank">Traformadores POLYLUX</a></p>
+                    <p><a href="" target="_blank"></a></p>
+                    <p><a href="" target="_blank"></a></p>
+                    <p><a href="" target="_blank"></a></p>
+                    <p><a href="" target="_blank"></a></p>
+                    <p><a href="" target="_blank"></a></p>
                     <p>Proyectos</p>
                     <p><li><a href="#El motor mas pequeño del mundo">El motor mas pequeño del mundo</a></li></p>
                     <p><li><a href="#proyecto traformador monofasico">Traformador monofasico</a></li></p>
