--- a/Electronica.html
+++ b/Electronica.html
@@ -23,7 +23,7 @@
                     <li><a href="Electricidad.html">Electricidad</a></li>
                     <li><a href="Telecomunicaciones.html">Telecomunicaciones</a></li>
                     <li><a href="Fotovoltaica.html">Fotovoltaica</a></li>
-                    <li><a href="Informatica.html">Programación</a></li>
+                    <li><a href="Informatica.html">Informatica</a></li>
                     <li><a href="Domotica.html">Domótica</a></li>
 
                 </ul>
@@ -44,6 +44,12 @@
                     <p><a href="https://www.luisllamas.es/esp8266-esp32/" target="_blank">Esp 32</a></p>
                     <p>Tiendas</p>
                     <p><a href="https://www.alldatasheet.es/" target="_blank">Tienda de Componentes</a></p>
+                    <p><a href="https://www.yuasa.es/" target="_blank">Baterias industriales YUASA </a></p>
+                    <p><a href="https://www.avisor.es/" target="_blank">Traformadores AVISOR</a></p>
+                    <p><a href="https://www.mouser.es/" target="_blank">MOUSER ELECTROICS</a></p>
+                    <p><a href="" target="_blank"></a></p>
+                    <p><a href="" target="_blank"></a></p>
+                    <p><a href="" target="_blank"></a></p>
                     <p>Proyectos</p>
                     <p><a href="#Proyecto-campo">Proyecto Campo</a></p>
                 </div>
