--- a/Fotovoltaica.html
+++ b/Fotovoltaica.html
@@ -23,7 +23,7 @@
                     <li><a href="Electronica.html">Electronica</a></li>                  
                     <li><a href="Electricidad.html">Electricidad</a></li>
                     <li><a href="Telecomunicaciones.html">Telecomunicaciones</a></li>
-                    <li><a href="Informatica.html">Programación</a></li>
+                    <li><a href="Informatica.html">Informatica</a></li>
                     <li><a href="Domotica.html">Domótica</a></li>
                 </ul>
             </nav>
@@ -40,6 +40,12 @@
                         <p>Reglamento</p>
                         <p><a href="https://www.idae.es/publicaciones/instalaciones-de-energia-solar-fotovoltaica-pliego-de-condiciones-tecnicas-de" target="_blank">Reglamento de IDAE</a></p>
                         <p>Tiendas</p>
+                        <p><a href="https://tienda.suministrosorduna.com/" target="_blank">ORDUÑA</a></p>
+                        <p><a href="https://faytexsl.com/categoria-producto/fijacion-paneles-solares/" target="_blank">FAYTEX</a></p>
+                        <p><a href="https://www.indexfix.com/en/sales-channels/installation-systems/installation-systems-and-fixings-for-solar-panels" target="_blank">INDEX</a></p>
+                        <p><a href="" target="_blank"></a></p>
+                        <p><a href="" target="_blank"></a></p>
+                        <p><a href="" target="_blank"></a></p>
                         <p><a href="" target="_blank"></a></p>
                         <p>Proyectos</p>
                         <p>Documentacion</p>
