--- a/Informatica.html
+++ b/Informatica.html
@@ -41,6 +41,10 @@
                         <p>Tiendas</p>
                         <p><a href="https://www.3go.es/es/" target="_blank">3GO</a></p>
                         <p><a href="https://www.pccomponentes.com/" target="_blank">PCcomponentes</a></p>
+                        <p><a href="https://www.icop.com.tw/#!" target="_blank">ICOP</a></p>
+                        <p><a href="https://cenval.es/" target="_blank">CENVALSA</a></p>
+                        <p><a href="https://es.transcend-info.com/" target="_blank">TRANSCEND</a></p>
+                        <p><a href="" target="_blank"></a></p>
                         <p>Documentacion</p>
                         <p><a href="https://exercism.org/" target="_blank">Practicas de Programacion</a></p>
                     </div>
