--- a/Telecomunicaciones.html
+++ b/Telecomunicaciones.html
@@ -23,7 +23,7 @@
                     <li><a href="Electronica.html">Electronica</a></li>           
                     <li><a href="Electricidad.html">Electricidad</a></li>
                     <li><a href="Fotovoltaica.html">Fotovoltaica</a></li>
-                    <li><a href="Informatica.html">Programación</a></li>
+                    <li><a href="Informatica.html">Informatica</a></li>
                     <li><a href="Domotica.html">Domótica</a></li>
                 </ul>
             </nav>
@@ -42,6 +42,10 @@
                     <p><a href="https://www.boe.es/biblioteca_juridica/codigos/codigo.php?id=110&modo=2&nota=0&tab=2" target="_blank">Reglamento ICT</a></p>
                     <p>Tiendas</p>
                     <p><a href="https://global.televes.com/" target="_blank">TELEVES</a></p>
+                    <p><a href="https://innoinstrument.com/" target="_blank">Fusionadoras de FO de INNOINSTRUMENT</a></p>
+                    <p><a href="https://koc.com.cn/" target="_blank">FO de KOC</a></p>
+                    <p><a href="" target="_blank"></a></p>
+                    <p><a href="" target="_blank"></a></p>
                     <p>Proyectos</p>
                     <p>Documentacion</p>
                     <p><a href="pdf\HDRANGERlite manual de medidor dde campo.pdf" target="_blank">Manual del medidor de campo</a></p>
