--- a/Telecomunicaciones.html
+++ b/Telecomunicaciones.html
@@ -49,9 +49,13 @@
                     <p>Proyectos</p>
                     <p>Documentacion</p>
                     <p><a href="pdf\HDRANGERlite manual de medidor dde campo.pdf" target="_blank">Manual del medidor de campo</a></p>
-                    <p><a href="pdf\TEMA 6.pdf" target="_blank">Antenas y lineas para recepcion de comunicaciones por satelite</a></p>
-                    <p><a href="pdf\TEMA 7.pdf" target="_blank">Procesado y distribucion de señales de radio y television por satelite</a></p>
+                    <p><a href="pdf\TEMA 6.pdf" target="_blank">Tema 6 Antenas y lineas para recepcion de comunicaciones por satelite</a></p>
+                    <p><a href="pdf\TEMA 7.pdf" target="_blank">Tema 7 Procesado y distribucion de señales de radio y television por satelite</a></p>
                     <p><a href="pdf\Guia_de_producto_ES_2023.pdf" target="_blank">Guia de producto ES 2023 de TELEVES</a></p>
+                    <p><a href="pdf\Tema 1 ICT2 Abril 2021 Normativa.pdf" target="_blank">Tema 1 Infraestructura comun de Telecomunicaciones</a></p>
+                    <p><a href="pdf\Tema 3 Antenas y Lineas RTV feb 2023.pdf" target="_blank">Tema 3 Antenas y lineas para recepcion de comunicaciones por television terrestre </a></p>
+                    <p><a href="pdf\Tema 9 ICT2 Resumen.pdf" target="_blank">Tema 9 Instalacion de telefonia</a></p>
+                    <p><a href="" target="_blank"></a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Reglamento Telecomunicaciones</h3>
