--- a/Electricidad.html
+++ b/Electricidad.html
@@ -186,6 +186,38 @@
                         </div>
                         <div class="proyecto" id="proyecto traformador monofasico video">
                             <video controls>
+                                <source src="videos\Campo magnetico giratorio y motores sincronos trifasicos.mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3>Campo magnetico giratorio y motores sincronos trifasicos</h3>
+                            <p></p>
+                        </div>
+                        <div class="proyecto" id="proyecto traformador monofasico video">
+                            <video controls>
+                                <source src="videos\Máquinas eléctricas   El alternador.avi" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3>Máquinas eléctricas el alternador</h3>
+                            <p></p>
+                        </div>
+                        <div class="proyecto" id="proyecto traformador monofasico video">
+                            <video controls>
+                                <source src="videos\TUTORIAL DE BOBINADOS 35  Probador de inducido.mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3>bobinado de un rotor</h3>
+                            <p></p>
+                        </div>
+                        <div class="proyecto" id="proyecto traformador monofasico video">
+                            <video controls>
+                                <source src="videos\Variador de Frecuencia Explicado   Conceptos Básicos del VFD Inversor de IGB.mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3>Varioador de frecuencia basico</h3>
+                            <p></p>
+                        </div>
+                        <div class="proyecto" id="proyecto traformador monofasico video">
+                            <video controls>
                                 <source src="" type="video/mp4">
                                 Tu navegador no soporta la reproducción de videos.
                             </video>
