TOMA TIERRA EN PLACAS SOLAR

--- a/Fotovoltaica.html
+++ b/Fotovoltaica.html
@@ -78,6 +78,36 @@
                         <h3>Proyectos Fotovoltaica</h3>
                     </div>
                 </div> 
+            <div class="cabecera">
+                <h2>Videos proyectos</h2>
+                <p>En esta sección encontrarás todos los videos de los proyectos</p>
+            </div>
+                <div class="columnas">
+                    <div class="proyecto" id="proyecto traformador monofasico video">
+                        <video controls>
+                            <source src="videos\TOMA TIERRA EN PLACAS SOLAR.mp4" type="video/mp4">
+                            Tu navegador no soporta la reproducción de videos.
+                        </video>
+                        <h3>TOMA TIERRA EN PLACAS SOLAR</h3>
+                        <p></p>
+                    </div>
+                    <div class="proyecto" id="proyecto traformador monofasico video">
+                        <video controls>
+                            <source src="" type="video/mp4">
+                            Tu navegador no soporta la reproducción de videos.
+                        </video>
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                    <div class="proyecto" id="proyecto traformador monofasico video">
+                        <video controls>
+                            <source src="" type="video/mp4">
+                            Tu navegador no soporta la reproducción de videos.
+                        </video>
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                </div>
         </main>
         <footer>
             <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
