dos nuevas web de probeedores de fotovoltaica

--- a/Fotovoltaica.html
+++ b/Fotovoltaica.html
@@ -43,8 +43,8 @@
                         <p><a href="https://tienda.suministrosorduna.com/" target="_blank">ORDUÑA</a></p>
                         <p><a href="https://faytexsl.com/categoria-producto/fijacion-paneles-solares/" target="_blank">FAYTEX</a></p>
                         <p><a href="https://www.indexfix.com/en/sales-channels/installation-systems/installation-systems-and-fixings-for-solar-panels" target="_blank">INDEX</a></p>
-                        <p><a href="" target="_blank"></a></p>
-                        <p><a href="" target="_blank"></a></p>
+                        <p><a href="https://www.peimar.com/es/home/" target="_blank">PEIMAR</a></p>
+                        <p><a href="https://atersa.shop/" target="_blank">ATERSA</a></p>
                         <p><a href="" target="_blank"></a></p>
                         <p><a href="" target="_blank"></a></p>
                         <p>Proyectos</p>
