BIELEC DE MATELEC

--- a/Electronica.html
+++ b/Electronica.html
@@ -47,7 +47,8 @@
                     <p><a href="https://www.yuasa.es/" target="_blank">Baterias industriales YUASA </a></p>
                     <p><a href="https://www.avisor.es/" target="_blank">Traformadores AVISOR</a></p>
                     <p><a href="https://www.mouser.es/" target="_blank">MOUSER ELECTROICS</a></p>
-                    <p><a href="" target="_blank"></a></p>
+                    <p><a href="pdf\doc_catalog_084453-3991761.pdf" target="_blank">BIELEC catalogo general</a></p>
+                    <p><a href="https://www.bielec.es/" target="_blank">BIELEC</a></p>
                     <p><a href="" target="_blank"></a></p>
                     <p><a href="" target="_blank"></a></p>
                     <p>Proyectos</p>
