mas documentacion miniblok y hoja de abacos

--- a/Electricidad.html
+++ b/Electricidad.html
@@ -85,7 +85,7 @@
                     <p><a href="pdf\CTI UF.pdf" target="_blank">Centros de traformacion Interperie</a></p>
                     <p><a href="pdf\LAMT hasta 20 kV.pdf" target="_blank">Lineas de alta tension</a></p>
                     <p><a href="pdf\celdas AT.pdf" target="_blank">Documentacion de Celdas de alta tension</a></p>
-                    <p><a href="" target="_blank"></a></p>
+                    <p><a href="pdf\IG-081-ES-04 MINIBLOK GNF.pdf" target="_blank">Conjunto de CT compacto MINIBLOK</a></p>
                     <p><a href="" target="_blank"></a></p>
                     <p>-Automatismos</p>
                     <p><a href="pdf\0.- AMPLIACIÓN DE CONCEPTOS DE AUTOMATISMOS.pdf" target="_blank">Tema 0</a></p>
@@ -137,6 +137,7 @@
                     <h3>Proyecto traformador monofasico</h3>
                     <p>En este proyecto se va a realizar un traformador monofasico de 220v a unas tensiones de salida de 6v, 12v y 24v para esto se an tenido que hacer una serie de calñculos que seran proporcionados junto al total de las especificaciones del traformador que sera en un pdf con los calculos resueltos</p>
                     <p><a href="" target="_blank">Proyecto trformador monofasico calculos resueltos</a></p>
+                    <p><a href="pdf\HOJA DE ABACOS (4).pdf" target="_blank">Hoja de abacos</a>Esta hoja es utilizada para calcular un traformador de asta 3KVA el calculo se hce de manera sencilla</p>
                     <p><li><a href="#proyecto traformador monofasico video">Proyecto trformador monofasico</a></li></p>
                 </div>
             </div>
