Libros de programacion

--- a/Informatica.html
+++ b/Informatica.html
@@ -45,8 +45,10 @@
                         <p><a href="https://cenval.es/" target="_blank">CENVALSA</a></p>
                         <p><a href="https://es.transcend-info.com/" target="_blank">TRANSCEND</a></p>
                         <p><a href="" target="_blank"></a></p>
+                        <p><a href="" target="_blank"></a></p>
                         <p>Documentacion</p>
                         <p><a href="https://exercism.org/" target="_blank">Practicas de Programacion</a></p>
+                        <p><a href="https://books.goalkicker.com/" target="_blank">Libros de programacion</a></p>
                     </div>
                     <div class="columnastipo">
                         <h3>Libros y cursos de programación</h3>
