Excel para calcular traformadores

--- a/Electricidad.html
+++ b/Electricidad.html
@@ -137,8 +137,9 @@
                     <h3>Proyecto traformador monofasico</h3>
                     <p>En este proyecto se va a realizar un traformador monofasico de 220v a unas tensiones de salida de 6v, 12v y 24v para esto se an tenido que hacer una serie de calñculos que seran proporcionados junto al total de las especificaciones del traformador que sera en un pdf con los calculos resueltos</p>
                     <p><a href="" target="_blank">Proyecto trformador monofasico calculos resueltos</a></p>
-                    <p><a href="pdf\HOJA DE ABACOS (4).pdf" target="_blank">Hoja de abacos.</a> Esta hoja es utilizada para calcular un traformador de asta 3KVA el calculo se hce de manera sencilla</p>
-                    <p><li><a href="#proyecto traformador monofasico video">Proyecto trformador monofasico</a></li></p>
+                    <p>Esta hoja es utilizada para calcular un traformador de asta 3KVA el calculo se hce de manera sencilla<a href="pdf\HOJA DE ABACOS (4).pdf" target="_blank">Hoja de abacos.</a></p>
+                    <p>Este excel te permite calcular cualqier traformador monofasico y trifasico<a href="excel\Calculo traformadores.xlsx" target="_blank">Excel.</a></p>
+                    <p><li><a href="#proyecto traformador monofasico video">Proyecto traformador monofasico</a></li></p>
                 </div>
             </div>
             <div class="cabecera" id="videos proyectos">
