Ejercicios contadores resueltos

--- a/Domotica.html
+++ b/Domotica.html
@@ -107,6 +107,7 @@
                     <p>Ejercicios Resueltos</p>
                     <p><a href="pdf\Ejercicio1_merged.pdf" target="_blank">Ejercicios Basicos</a></p>
                     <p><a href="pdf\ejercicio 1_merged.pdf" target="_blank">Ejercicios Temporizadores</a></p>
+                    <p><a href="pdf\Ejercicio 1_contadores.pdf" target="_blank">Ejercicios Contadores</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Proyectos S7-1200</h3>
