cambio a temario automatismos

--- a/Electricidad.html
+++ b/Electricidad.html
@@ -78,8 +78,7 @@
                     <p><a href="" target="_blank"></a></p>
                     <p><a href="" target="_blank"></a></p>
                     <p>Proyectos</p>
-                    <p><li><a href="#El motor mas pequeño del mundo">El motor mas pequeño del mundo</a></li></p>
-                    <p><li><a href="#proyecto traformador monofasico">Traformador monofasico</a></li></p>
+                    <p><li><a href="#Proyectos">Proyectos Electricidad</a></li></p>
                     <p>Documentacion</p>
                     <p><a href="pdf\ct prefabricado UF.pdf" target="_blank">Centros de traformacion prefabricados de Unionfenosa</a></p>
                     <p><a href="pdf\CTI UF.pdf" target="_blank">Centros de traformacion Interperie</a></p>
@@ -87,16 +86,6 @@
                     <p><a href="pdf\celdas AT.pdf" target="_blank">Documentacion de Celdas de alta tension</a></p>
                     <p><a href="pdf\IG-081-ES-04 MINIBLOK GNF.pdf" target="_blank">Conjunto de CT compacto MINIBLOK</a></p>
                     <p><a href="" target="_blank"></a></p>
-                    <p>-Automatismos</p>
-                    <p><a href="pdf\0.- AMPLIACIÓN DE CONCEPTOS DE AUTOMATISMOS.pdf" target="_blank">Tema 0</a></p>
-                    <p><a href="pdf\0.1.- Simbología.pdf" target="_blank">Tema 0.1</a></p>
-                    <p><a href="pdf\1.- ENVOLVENTES Y CUADROS ELÉCTRICOS.pdf" target="_blank">Tema 1</a></p>
-                    <p><a href="pdf\2.- MECANIZADO DE CUADROS ELÉCTRICOS.pdf" target="_blank">Tema 2</a></p>
-                    <p><a href="pdf\3.- PROTECCIÓN DE LAS INSTALACIONES.pdf" target="_blank">Tema 3</a></p>
-                    <p><a href="pdf\4.- MOTORES ELÉCTRICOS.pdf" target="_blank">Tema 4</a></p>
-                    <p><a href="pdf\5.- AUTOMATISMOS INDUSTRIALES CABLEADOS.pdf" target="_blank">Tema 5</a></p>
-                    <p><a href="pdf\6.- ESQUEMAS Y CIRCUITOS BÁSICOS.pdf" target="_blank">Tema 6</a></p>
-                    <p><a href="pdf\7.- ARRANQUE Y VARIACIÓN DE VELOCIDAD.pdf" target="_blank">Tema 7</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Reglmento REBT</h3>
@@ -123,7 +112,7 @@
                     </p>
                     <p><a href="https://industria.gob.es/Calidad-Industrial/seguridadindustrial/instalacionesindustriales/instalaciones-alta-tension/Paginas/reglamento-seguridad-instalaciones-alta-tension.aspx"target="_blank">RLAT de industria</a></p>
                 </div>
-                <div class="columnastipo">
+                <div class="columnastipo" id="Proyectos">
                     <h3>Proyectos Electricidad</h3>
                     <p><li><a href="#El motor mas pequeño del mundo">El motor mas pequeño del mundo</a></li></p>
                     <p><li><a href="#proyecto traformador monofasico">Traformador monofasico</a></li></p>
@@ -139,6 +128,19 @@
                     <p><a href="pdf\calculos traformador.pdf" target="_blank">Proyecto trformador monofasico calculos resueltos</a></p>
                     <p>Esta hoja es utilizada para calcular un traformador de asta 3KVA el calculo se hce de manera sencilla<a href="pdf\HOJA DE ABACOS (4).pdf" target="_blank">Hoja de abacos.</a></p>
                     <p>Este excel te permite calcular cualqier traformador monofasico y trifasico<a href="excel\Calculo traformadores.xlsx" target="_blank">Excel.</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>AUTOMATISMOS</h3>
+                    <p>Temario de automatismos</p>
+                    <p><a href="pdf\0.- AMPLIACIÓN DE CONCEPTOS DE AUTOMATISMOS.pdf" target="_blank">Tema 0</a></p>
+                    <p><a href="pdf\0.1.- Simbología.pdf" target="_blank">Tema 0.1</a></p>
+                    <p><a href="pdf\1.- ENVOLVENTES Y CUADROS ELÉCTRICOS.pdf" target="_blank">Tema 1</a></p>
+                    <p><a href="pdf\2.- MECANIZADO DE CUADROS ELÉCTRICOS.pdf" target="_blank">Tema 2</a></p>
+                    <p><a href="pdf\3.- PROTECCIÓN DE LAS INSTALACIONES.pdf" target="_blank">Tema 3</a></p>
+                    <p><a href="pdf\4.- MOTORES ELÉCTRICOS.pdf" target="_blank">Tema 4</a></p>
+                    <p><a href="pdf\5.- AUTOMATISMOS INDUSTRIALES CABLEADOS.pdf" target="_blank">Tema 5</a></p>
+                    <p><a href="pdf\6.- ESQUEMAS Y CIRCUITOS BÁSICOS.pdf" target="_blank">Tema 6</a></p>
+                    <p><a href="pdf\7.- ARRANQUE Y VARIACIÓN DE VELOCIDAD.pdf" target="_blank">Tema 7</a></p>
                 </div>
             </div>
             <div class="cabecera" id="videos proyectos">
