HTML de  electricidad

--- a/Electricidad.html
+++ b/Electricidad.html
@@ -80,12 +80,7 @@
                     <p>Proyectos</p>
                     <p><li><a href="#Proyectos">Proyectos Electricidad</a></li></p>
                     <p>Documentacion</p>
-                    <p><a href="pdf\ct prefabricado UF.pdf" target="_blank">Centros de traformacion prefabricados de Unionfenosa</a></p>
-                    <p><a href="pdf\CTI UF.pdf" target="_blank">Centros de traformacion Interperie</a></p>
-                    <p><a href="pdf\LAMT hasta 20 kV.pdf" target="_blank">Lineas de alta tension</a></p>
-                    <p><a href="pdf\celdas AT.pdf" target="_blank">Documentacion de Celdas de alta tension</a></p>
-                    <p><a href="pdf\IG-081-ES-04 MINIBLOK GNF.pdf" target="_blank">Conjunto de CT compacto MINIBLOK</a></p>
-                    <p><a href="" target="_blank"></a></p>
+                    <p><li><a href="#Documentacion">Documentacion</a></li></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Reglmento REBT</h3>
@@ -141,6 +136,22 @@
                     <p><a href="pdf\5.- AUTOMATISMOS INDUSTRIALES CABLEADOS.pdf" target="_blank">Tema 5</a></p>
                     <p><a href="pdf\6.- ESQUEMAS Y CIRCUITOS BÁSICOS.pdf" target="_blank">Tema 6</a></p>
                     <p><a href="pdf\7.- ARRANQUE Y VARIACIÓN DE VELOCIDAD.pdf" target="_blank">Tema 7</a></p>
+                    <p><a href="pdf\AUTOMATISMOS INDUSTRIALES.pdf" target="_blank">Practicas automatismos</a></p>
+                </div>
+                <div class="columnastipo" id="Documentacion">
+                    <h3>DOCUMENTACION</h3>
+                    <p><a href="pdf\ct prefabricado UF.pdf" target="_blank">Centros de traformacion prefabricados de Unionfenosa</a></p>
+                    <p><a href="pdf\CTI UF.pdf" target="_blank">Centros de traformacion Interperie</a></p>
+                    <p><a href="pdf\LAMT hasta 20 kV.pdf" target="_blank">Lineas de alta tension</a></p>
+                    <p><a href="pdf\celdas AT.pdf" target="_blank">Documentacion de Celdas de alta tension</a></p>
+                    <p><a href="pdf\IG-081-ES-04 MINIBLOK GNF.pdf" target="_blank">Conjunto de CT compacto MINIBLOK</a></p>
+                    <p><a href="pdf\MT_PE_2016.pdf" target="_blank">Proteciones Electricas</a></p>
+                    <p><a href="pdf\MT-CS HD60364.pdf" target="_blank">Calculo de secciones</a></p>
+                    <p><a href="pdf\MT-IEI.pdf" target="_blank">Instalacionse de interior</a></p>
+                    <p><a href="pdf\SIMBOLOGIA PARA ELECTRICISTAS vA5.pdf" target="_blank">Representacion grafica y simbolica</a></p>
+                    <p><a href="pdf\MT-IRVE.pdf" target="_blank">Infraestructura de recarga de vehiculos electricos</a></p>
+                    <p><a href="pdf\MT-DPSIE.pdf" target="_blank">Documentacion y puesta en servicio</a></p>
+                    <p><a href="" target="_blank"></a></p><p><a href="" target="_blank"></a></p>
                 </div>
             </div>
             <div class="cabecera" id="videos proyectos">
