HTML de electronica

--- a/Electronica.html
+++ b/Electronica.html
@@ -42,6 +42,7 @@
                     <p>Documentacion</p>
                     <p><a href="https://www.luisllamas.es/tutoriales-arduino/" target="_blank">Arduino</a></p>
                     <p><a href="https://www.luisllamas.es/esp8266-esp32/" target="_blank">Esp 32</a></p>
+                    <p><a href="pdf\MT - EPE.pdf" target="_blank">Electronica Basica</a></p>
                     <p>Tiendas</p>
                     <p><a href="https://www.alldatasheet.es/" target="_blank">Tienda de Componentes</a></p>
                     <p><a href="https://www.yuasa.es/" target="_blank">Baterias industriales YUASA </a></p>
