Retoque de imagen de esquema del sensor dht 11 y 22

--- a/Electronica.html
+++ b/Electronica.html
@@ -125,12 +125,12 @@
                         <h3>Conesion con un lcd 1602 con modulo I2C</h3>
                     </div>
                     <div class="proyecto">
-                        <img src="fotos\esquema sensor DHT22.png" alt="Esquema sensor DHT22 y del DHT11">
-                        <h3>Esquema sensor DHT22 y del DHT11</h3>
+                        <img src="fotos\esquema sensor DHT22.png" alt="Esquema sensor DHT22">
+                        <h3>Esquema sensor DHT22</h3>
                     </div>
                     <div class="proyecto">
-                        <img src="" alt="">
-                        <h3></h3>
+                        <img src="fotos\esquema sensor DHT11.png" alt="Esquema sensor DHT11">
+                        <h3>Esquema sensor DHT11</h3>
                     </div>
                     <div class="proyecto">
                         <img src="" alt="">
