Practica 4 y 5 de domotica y el html

--- a/Domotica.html
+++ b/Domotica.html
@@ -108,6 +108,10 @@
                     <p><a href="pdf\Ejercicio1_merged.pdf" target="_blank">Ejercicios Basicos</a></p>
                     <p><a href="pdf\ejercicio 1_merged.pdf" target="_blank">Ejercicios Temporizadores</a></p>
                     <p><a href="pdf\Ejercicio 1_contadores.pdf" target="_blank">Ejercicios Contadores</a></p>
+                    <p>Practicas de taller</p>
+                    <p><a href="pdf\Practica 1 completada.pdf" target="_blank">Practica 1</a>    <a href="pdf\Practica 2 completa.pdf" target="_blank">Practica 2</a></p>
+                    <p><a href="pdf\PRACTICA 3 _merged.pdf" target="_blank">Practica 3</a>       <a href="pdf\PRACTICA 4_merged.pdf" target="_blank">Practica 4</a></p>
+                    <p><a href="pdf\PRACTICA 5 INDO_merged.pdf" target="_blank">Practica 5</a>   <a href="pdf\ilovepdf_merged.pdf" target="_blank">Practica 6</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Proyectos S7-1200</h3>
