Tema 7 de fotovoltaica y el html

--- a/Fotovoltaica.html
+++ b/Fotovoltaica.html
@@ -51,6 +51,7 @@
                         <p>Documentacion</p>
                         <p><a href="pdf\Tema 3 fotovoltaica.pdf" target="_blank">Diseño de una instalacion fotovoltaica</a></p>
                         <p><a href="pdf\Tema 6 fotovoltaica.pdf" target="_blank">Mantenimiento de una instalacion fotovoltaica</a></p>
+                        <p><a href="pdf\Tema 7 Fotovoltaica.pdf" target="_blank">Instalaciones fotovoltaicas conectadas a red</a></p>
                     </div>
                     <div class="columnastipo">
                         <h3>Reglamento Fotovoltaica</h3>
@@ -76,6 +77,9 @@
                     </div>
                     <div class="columnastipo">
                         <h3>Proyectos Fotovoltaica</h3>
+                    </div>
+                    <div class="columnastipo">
+                        <h3>Practicas</h3>
                     </div>
                 </div> 
             <div class="cabecera">
